--- a/recover-matrix-server/roles/recover-matrix-server/tasks/deploy_service.yml
+++ b/recover-matrix-server/roles/recover-matrix-server/tasks/deploy_service.yml
@@ -39,25 +39,13 @@
 #bash-4.4# echo -e '# Custom DNS records for matrix.fishbole.xyz\n165.22.255.141 fishbole.xyz\n165.22.255.141 matrix.fishbole.xyz\n165.22.255.141 element.fishbole.xyz\n165.22.255.141 jitsi.fishbole.xyz' >> /etc/hosts
 
 
-- name: Note the IP address generated during provision. 
-  delegate_to: "{{ awx_server }}"
-  fetch:
-    src: "/var/lib/awx/projects/clients/{{ member_id }}/{{ new_subscription_id }}/server_vars.yml"
-    dest: "/tmp/{{ matrix_domain }}-new_server_vars.yml"
-    flat: yes
-  when: lock_file_5.stat.exists == false
-
-- name: Include new_server_vars.yml variable file
-  include_vars: "/tmp/{{ matrix_domain }}-new_server_vars.yml"
-  when: lock_file_5.stat.exists == false
-
 - name: Add new known_hosts record for the homeserver address.
   delegate_to: "{{ awx_server }}"
   command: |
-    docker exec -i -t awx_task bash echo -e '# Custom DNS records for matrix.{{ matrix_domain }}\n{{ server_ipv4 }} {{ matrix_domain }}\n{{ server_ipv4 }} matrix.{{ matrix_domain }}\n{{ server_ipv4 }} element.{{ matrix_domain }}\n{{ server_ipv4 }} jitsi.{{ matrix_domain }}' >> /etc/hosts
+    docker exec -i -t awx_task bash echo -e '# Custom DNS records for matrix.{{ matrix_domain }}\n{{ server_ip_final }} {{ matrix_domain }}\n{{ server_ip_final }} matrix.{{ matrix_domain }}\n{{ server_ip_final }} element.{{ matrix_domain }}\n{{ server_ip_final }} jitsi.{{ matrix_domain }}' >> /etc/hosts
   when: lock_file_5.stat.exists == false
 
-
+#^ THIS SHOULD BE CLEARED LATER!
 
 #12) Remove the 'start' tag from the new '0 - Deploy/Update a Server'. As admin user, run that template with the following extra variable added:
 
@@ -69,7 +57,7 @@
   delegate_to: "{{ awx_server }}"
   fetch:
     src: "/var/lib/awx/projects/clients/{{ member_id }}/{{ new_subscription_id }}/extra_vars.json"
-    dest: "/tmp/{{ matrix_domain }}-new_extra_vars.json"
+    dest: "/tmp/{{ matrix_domain }}_new_extra_vars.json"
     flat: yes
   when: lock_file_5.stat.exists == false
 
@@ -85,7 +73,7 @@
 #}
 - name: Update 'new_extra_vars.json' file to include SSL disabler
   lineinfile:
-    path: '/tmp/{{ matrix_domain }}-new_extra_vars.json'
+    path: '/tmp/{{ matrix_domain }}_new_extra_vars.json'
     create: no
     insertafter: '^{'
     line: '  "matrix_ssl_retrieval_method": "none",'
@@ -99,7 +87,7 @@
   awx.awx.tower_job_template:
     name: "{{ matrix_domain }} - 0 - Deploy/Update a Server"
     description: "Creates a new matrix service with Spantaleev's playbooks"
-    extra_vars: "{{ lookup('file', '/tmp/{{ matrix_domain }}-new_extra_vars.json') }}"
+    extra_vars: "{{ lookup('file', '/tmp/{{ matrix_domain }}_new_extra_vars.json') }}"
     job_type: run
     job_tags: "setup-all"
     inventory: "{{ member_id }}"
