add hosts file cleanup and ssh transmit key cleanup

--- a/recover-matrix-server/roles/raise-matrix-server/tasks/deploy_test_server.yml
+++ b/recover-matrix-server/roles/raise-matrix-server/tasks/deploy_test_server.yml
@@ -4,6 +4,14 @@
     path: "/tmp/{{ matrix_domain }}_lock_9"
   register: lock_file_9
 
+#delete previous /etc/hosts record in AWX
+
+- name: Clean up known_hosts record in AWX for the homeserver address
+  delegate_to: "{{ awx_server }}"
+  command: |
+    docker exec -i -t awx_task bash sed -i '/{{ matrix_domain }}/d' /etc/hosts
+  when: lock_file_9.stat.exists == false
+
 #launch that motherfucker
 
 - name: Launch deploy job template on AWX
