--- a/recover-matrix-server/roles/recover-matrix-server/tasks/deploy_service.yml
+++ b/recover-matrix-server/roles/recover-matrix-server/tasks/deploy_service.yml
@@ -38,14 +38,11 @@
 #root@AWX-panel:~# docker exec -i -t awx_task bash
 #bash-4.4# echo -e '# Custom DNS records for matrix.fishbole.xyz\n165.22.255.141 fishbole.xyz\n165.22.255.141 matrix.fishbole.xyz\n165.22.255.141 element.fishbole.xyz\n165.22.255.141 jitsi.fishbole.xyz' >> /etc/hosts
 
-
-- name: Add new known_hosts record for the homeserver address.
+- name: Add new known_hosts record in AWX for the homeserver address
   delegate_to: "{{ awx_server }}"
   command: |
-    docker exec -i -t awx_task bash echo -e '# Custom DNS records for matrix.{{ matrix_domain }}\n{{ server_ip_final }} {{ matrix_domain }}\n{{ server_ip_final }} matrix.{{ matrix_domain }}\n{{ server_ip_final }} element.{{ matrix_domain }}\n{{ server_ip_final }} jitsi.{{ matrix_domain }}' >> /etc/hosts
+    docker exec -i -t awx_task bash echo -e '# Custom DNS records for matrix.{{ matrix_domain }}\n{{ server_ip_final }} {{ matrix_domain }}\n{{ server_ip_final }} matrix.{{ matrix_domain }}\n{{ server_ip_final }} {{ awx_element_subdomain }}.{{ matrix_domain }}\n{{ server_ip_final }} jitsi.{{ matrix_domain }}' >> /etc/hosts
   when: lock_file_5.stat.exists == false
-
-#^ THIS SHOULD BE CLEARED LATER!
 
 #12) Remove the 'start' tag from the new '0 - Deploy/Update a Server'. As admin user, run that template with the following extra variable added:
 
