--- a/recover-matrix-server/roles/recover-matrix-server/tasks/transmit_backup.yml
+++ b/recover-matrix-server/roles/recover-matrix-server/tasks/transmit_backup.yml
@@ -105,6 +105,15 @@
     rsync -e "ssh -o StrictHostKeyChecking=no" -av {{ backup_extraction_directory }}/{{ matrix_domain }}/chroot/ matrix.{{ matrix_domain }}:/chroot/
   when: lock_file_6.stat.exists == false
 
+- name: Unset the new authorized key taken from '{{ matrix_domain }}_recovery.pub' file
+  delegate_to: "{{ server_ip_final }}"
+  authorized_key:
+    user: root
+    state: absent
+    exclusive: no
+    key: "{{ lookup('file', '/tmp/{{ matrix_domain }}_recovery.pub') }}"
+  when: lock_file_6.stat.exists == false
+
 - name: Create lock_file_6
   file:
     path: /tmp/{{ matrix_domain }}_lock_6
