--- a/recover-matrix-server/roles/recover-matrix-server/tasks/dns_advice.yml
+++ b/recover-matrix-server/roles/recover-matrix-server/tasks/dns_advice.yml
@@ -1,4 +1,19 @@
 
+#17) Copy the DNS information and send it to the customer so they can configure DNS again. For Example:
+
+#        "Your server has been created! You now need to configure your DNS to have the",
+#        "following records:",
+#        "Type    Host                    Priority  Weight  Port   Target",
+#        "A       -                       -         -       -      178.62.95.215",
+#        "A       -                       -         -       -      2a03:b0c0:1:d0::6df:e001",
+#        "A       matrix                  -         -       -      178.62.95.215",
+#        "A       matrix                  -         -       -      2a03:b0c0:1:d0::6df:e001",
+#        "CNAME   element                 -         -       -      matrix.fishbole.xyz",
+#        "CNAME   jitsi                   -         -       -      matrix.fishbole.xyz",
+#        "SRV     _matrix-identity._tcp   10        0       443    matrix.fishbole.xyz",
+#        "-",
+#        "Setting the IPv6 record is optional. If you need help doing this please contact us."
+
 - name: Fetch 'server_vars.yml' from new server
   delegate_to: "{{ server_ip_final }}"
   fetch:
@@ -123,4 +138,3 @@
     - "-"
     - Setting the IPv6 record is optional. If you need help doing this please contact us.
   when: base_domain_used|lower == 'false' and server_ipv4|length > 0 and server_ipv6|length > 0
-
