--- a/recover-matrix-server/roles/raise-matrix-server/tasks/configure_base_website.yml
+++ b/recover-matrix-server/roles/raise-matrix-server/tasks/configure_base_website.yml
@@ -9,25 +9,28 @@
 # aveng.xyz - 1 - Configure Website + Access Export
 
 - name: Include matrix_vars.yml variable file
-  include_vars: "/tmp/{{ matrix_domain }}-matrix_vars.yml"
+  include_vars: "/tmp/{{ matrix_domain }}_matrix_vars.yml"
 
-- name: Collect the extra_vars.json of the new subscription. 
-  delegate_to: "{{ awx_server }}"
-  fetch:
-    src: "/var/lib/awx/projects/clients/{{ member_id }}/{{ new_subscription_id }}/extra_vars.json"
-    dest: "/tmp/{{ matrix_domain }}-new_extra_vars.json"
-    flat: yes
-  when: lock_file_12.stat.exists == false
+#- name: Collect the extra_vars.json of the new subscription. 
+#  delegate_to: "{{ awx_server }}"
+#  fetch:
+#    src: "/var/lib/awx/projects/clients/{{ member_id }}/{{ new_subscription_id }}/extra_vars.json"
+#    dest: "/tmp/{{ matrix_domain }}-new_extra_vars.json"
+#    flat: yes
+#  when: lock_file_12.stat.exists == false
+
+#^ already done
 
 - name: Launch configure website job template on AWX
   awx.awx.tower_job_launch:
     job_template: "{{ matrix_domain }} - 1 - Configure Website + Access Export"
-    extra_vars: "{{ lookup('file', '/tmp/{{ matrix_domain }}_new_extra_vars.json') }}"
+    #extra_vars: "{{ lookup('file', '/tmp/{{ matrix_domain }}_new_extra_vars.json') }}"
     tower_host: "https://{{ awx_host }}"
     tower_oauthtoken: "{{ awx_session_token.ansible_facts.tower_token.token }}"
     validate_certs: yes
   when: ( matrix_nginx_proxy_base_domain_serving_enabled | bool ) and ( lock_file_12.stat.exists == false )
   register: configure_website_job
+  ignore_errors: True
 
 - name: Wait for configure website job max 900s (15m)
   awx.awx.tower_job_wait:
@@ -37,6 +40,7 @@
     tower_oauthtoken: "{{ awx_session_token.ansible_facts.tower_token.token }}"
     validate_certs: yes
   when: ( matrix_nginx_proxy_base_domain_serving_enabled | bool ) and ( lock_file_12.stat.exists == false )
+  ignore_errors: True
 
 - name: Create lock_file_12
   file:
