--- a/recover-matrix-server/roles/raise-matrix-server/tasks/deploy_test_server.yml
+++ b/recover-matrix-server/roles/raise-matrix-server/tasks/deploy_test_server.yml
@@ -4,13 +4,13 @@
     path: "/tmp/{{ matrix_domain }}_lock_9"
   register: lock_file_9
 
-#delete previous /etc/hosts record in AWX
+#delete previous /etc/hosts record in AWX (buggy!)
 
-- name: Clean up known_hosts record in AWX for the homeserver address
-  delegate_to: "{{ awx_server }}"
-  command: |
-    docker exec -i -t awx_task bash sed -i '/{{ matrix_domain }}/d' /etc/hosts
-  when: lock_file_9.stat.exists == false
+#- name: Clean up known_hosts record in AWX for the homeserver address
+#  delegate_to: "{{ awx_server }}"
+#  command: |
+#    docker exec -it awx_task bash -lc sed -i '/{{ matrix_domain }}/d' /etc/hosts
+#  when: lock_file_9.stat.exists == false
 
 #launch that motherfucker
 
@@ -40,7 +40,7 @@
     tower_host: "https://{{ awx_host }}"
     tower_oauthtoken: "{{ awx_session_token.ansible_facts.tower_token.token }}"
     validate_certs: yes
-  when: lock_file_9.stat.exists == false
+  when: ( lock_file_9.stat.exists == false ) and ( skip_self_check == false )
   register: check_job
 
 - name: Wait for self-check job max 900s (15m)
@@ -50,7 +50,7 @@
     tower_host: "https://{{ awx_host }}"
     tower_oauthtoken: "{{ awx_session_token.ansible_facts.tower_token.token }}"
     validate_certs: yes
-  when: lock_file_9.stat.exists == false
+  when: ( lock_file_9.stat.exists == false ) and ( skip_self_check == false )
 
 - name: Create lock_file_9
   file:
